--- a/OrderService/src/main/resources/application.yaml
+++ b/OrderService/src/main/resources/application.yaml
@@ -20,7 +20,22 @@ spring:
 
   config:
     import: configserver:http://localhost:9296
-
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: https://dev-03742505.okta.com/oauth2/default
+      client:
+        registration:
+          internal-client:
+            provider: okta
+            authorization-grant-type: client_credentials
+            scope: internal
+            client-id: 0oa90i7kntYAvGn0y5d7
+            client-secret: A41E3Df4hyzYelv1fwyOF3lYZzgzRjZVaM9mYUO4
+        provider:
+          okta:
+            issuer-uri: https://dev-03742505.okta.com/oauth2/default
 
 resilience4j:
   circuitbreaker:
